--- a/tableResults01.tex
+++ b/tableResults01.tex
@@ -1,51 +1,44 @@
-\begin{table*}[t!]
+\begin{table}[t!]
 \begin{centering}
-	\begin{tabularx}{0.68\linewidth}{|l|c c c c c|c c c c c|}
+	\begin{tabularx}{0.89\linewidth}{|l|c c c c c|}
 		\hline 
 		\rowcolor{maroon!50}
-		Method: & \multicolumn{5}{c|}{25k Pittsburgh} & \multicolumn{5}{c|}{55k Pittsburgh} \\
+		Method: & \multicolumn{5}{c|}{25k Pittsburgh} \\
 		\hline 
 		\hline 
 		%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!50}
-		recall@K [$\%$] & 1 & 2 & 5 & 10 & 20 & 1 & 2 & 5 & 10 & 20\\
+		recall@K [$\%$] & 1 & 2 & 5 & 10 & 20 \\
 		\hline
 		\rowcolor{maroon!10}
-		BOW & 28.7 & 35.7 & 45.8 & 53.7 & 61.5 & 8.7 & 11.0 & 17.3 & 22.8 & 25.4  \\
+		BOW           & 28.7  & 35.7  & 45.8 & 53.7   & 61.5 \\
         \rowcolor{maroon!10}
-		BOW p-val  & 33.0  & 40.3  & 50.2 &  58.7 &  66.4  & & & & & \\
+		BOW p-val     & 33.0  & 40.3  & 50.2 & 58.7   &  66.4 \\
         \rowcolor{maroon!10}
-		BOW w renorm & 31.8 & 38.7 & 49.7 & 60.2 & 69.4  & & & & & \\
+		BOW w renorm  & 31.8  & 38.7  & 49.7 & 60.2   & 69.4 \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
-		FV128         & 33.6 & 41.8 & 52.0 & 59.8 & 67.7 & 10.9 & 14.1 & 20.2 & 26.4 & 33.2 \\
+		FV128         & 33.6  & 41.8  & 52.0 & 59.8   & 67.7  \\
 		\rowcolor{maroon!10}
-		FV128 p-val   & \textbf{}  & \textbf{} & \textbf{} & \textbf{} & \textbf{}  &
-                                 \textbf{}  &  \textbf{}  &  \textbf{}  &  \textbf{}  &  \textbf{} \\
-        \rowcolor{maroon!10}
-		\textbf{FV128 w renorm}   & \textbf{37.8}  & \textbf{46.1} & \textbf{56.9} & \textbf{64.9} & \textbf{72.6}  &
-                                 \textbf{13.5}  &  \textbf{17.7}  &  \textbf{25.0}  &  \textbf{31.8}  &  \textbf{39.0} \\
-        \hline
+		FV128 p-val                 & \textbf{}       & \textbf{}     & \textbf{}     & \textbf{}     & \textbf{}  \\
+    \rowcolor{maroon!10}
+		\textbf{FV128 w renorm}     & \textbf{38.3}   & \textbf{47.5} & \textbf{57.7} & \textbf{65.8} & \textbf{72.7}  \\
+    \hline  
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \rowcolor{maroon!10}
-    FV512         & 44.3 & 51.7 & 61.4 & 68.7 & 75.2 & 17.3 &  21.1 &  28.4 &  34.2 &  40.3 \\
+    FV512         & 44.3 & 51.7   & 61.4  & 68.7   & 75.2  \\
     \rowcolor{maroon!10}
-    % FV512 p-val   & \textbf{}  & \textbf{} & \textbf{} & \textbf{} & \textbf{}  &
-    %                          \textbf{} &  \textbf{} &  \textbf{}  & \textbf{} &  \textbf{} \\
-    \rowcolor{maroon!10}
-    \textbf{FV512 w renorm}   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  &
-                             \textbf{19.8} &  \textbf{25.1} &  \textbf{32.7}  & \textbf{38.7} &  \textbf{46.0} \\
+    \textbf{FV512 w renorm}   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  \\
     \hline
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
-		FV2048        & 46.9  & 54.1 & 63.8 & 70.5 & 76.8 & 19.2 & 23.5 & 29.9 &  35.2 &  41.9 \\
+		FV2048        & 46.9  & 54.1  & 63.8  & 70.5    & 76.8 \\
 		\rowcolor{maroon!10}
 		% FV2048 p-val  & \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{} &
   %       \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{}\\
         \rowcolor{maroon!10}
-        \textbf{FV2048 w renorm}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} &
-        \textbf{20.8} & \textbf{25.9} & \textbf{33.1} & \textbf{38.7} & \textbf{45.9}\\
+        \textbf{FV2048 w renorm}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   %       \rowcolor{maroon!10}
@@ -56,8 +49,8 @@
 	\end{tabularx}
 	\caption{ \textcolor{myRed}{}
 %		The percentage of correctly localized test queries for which the topK ranked database image is within $20$ meters from the ground truth query position. The proposed method (svmFV) outperforms the baseline methods.
-The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$. The learnt descriptors by the proposed method (FV w renorm) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on both the 25k and 55k Pittsburgh image datasets.		
+The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$. The learnt descriptors by the proposed method (FV w renorm) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on the 25k Pittsburgh image datasets.		
 }
-\label{tab:recall}
+\label{tab:recall01}
 \end{centering}
-\end{table*}
+\end{table}
