--- a/tableResults01.tex
+++ b/tableResults01.tex
@@ -15,7 +15,7 @@
         \rowcolor{maroon!10}
 		BOW p-val     & 33.0  & 40.3  & 50.2 & 58.7   &  66.4 \\
         \rowcolor{maroon!10}
-		BOW w renorm  & 31.8  & 38.7  & 49.7 & 60.2   & 69.4 \\
+		BOW w-norm  & 31.8  & 38.7  & 49.7 & 60.2   & 69.4 \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
@@ -23,13 +23,13 @@
 		\rowcolor{maroon!10}
 		FV128 p-val                 & \textbf{}       & \textbf{}     & \textbf{}     & \textbf{}     & \textbf{}  \\
     \rowcolor{maroon!10}
-		\textbf{FV128 w renorm}     & \textbf{38.3}   & \textbf{47.5} & \textbf{57.7} & \textbf{65.8} & \textbf{72.7}  \\
+		\textbf{FV128 w-norm}     & \textbf{38.3}   & \textbf{47.5} & \textbf{57.7} & \textbf{65.8} & \textbf{72.7}  \\
     \hline  
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \rowcolor{maroon!10}
     FV512         & 44.3 & 51.7   & 61.4  & 68.7   & 75.2  \\
     \rowcolor{maroon!10}
-    \textbf{FV512 w renorm}   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  \\
+    \textbf{FV512 w-norm}   & \textbf{47.6}  & \textbf{55.4} & \textbf{65.1} & \textbf{72.4} & \textbf{78.8}  \\
     \hline
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\rowcolor{maroon!10}
@@ -38,18 +38,18 @@
 		% FV2048 p-val  & \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{} &
   %       \textbf{} & \textbf{} & \textbf{} & \textbf{} & \textbf{}\\
         \rowcolor{maroon!10}
-        \textbf{FV2048 w renorm}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} \\
+        \textbf{FV2048 w-norm}  & \textbf{50.2} & \textbf{57.3} & \textbf{67.0} & \textbf{73.8} & \textbf{78.0} \\
         \hline
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   %       \rowcolor{maroon!10}
   %       FV8192        & 46.0  & 52.7 & 62.5 & 69.4 & 76.4 & - & - & - & - &  -   \\
   %       \rowcolor{maroon!10}
-  %       \textbf{FV8192 w renorm}  & \textbf{48.4} & \textbf{55.6} & \textbf{65.4} & \textbf{72.6} & \textbf{79.0} & - & - & - & - & -\\
+  %       \textbf{FV8192 w-norm}  & \textbf{48.4} & \textbf{55.6} & \textbf{65.4} & \textbf{72.6} & \textbf{79.0} & - & - & - & - & -\\
 		% \hline
 	\end{tabularx}
 	\caption{ \textcolor{myRed}{}
 %		The percentage of correctly localized test queries for which the topK ranked database image is within $20$ meters from the ground truth query position. The proposed method (svmFV) outperforms the baseline methods.
-The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$. The learnt descriptors by the proposed method (FV w renorm) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on the 25k Pittsburgh image datasets.		
+The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$. The learnt descriptors by the proposed method (FV w-norm) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on the 25k Pittsburgh image datasets.		
 }
 \label{tab:recall01}
 \end{centering}
