captions for tables and figures

--- a/myFigureWnorm.tex
+++ b/myFigureWnorm.tex
@@ -101,6 +101,7 @@
         \end{minipage}
         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
         \caption{
+            \textbf{Examples of improvements and failure cases for \emph{w-norm} method on Fisher vectors.}
             Each example shows a query image (left) together with correct (green) and incorrect (red) matches from the database obtained by \emph{w-norm} method (top) and the raw Fisher vector descriptor baseline (bottom). For each method we show the top 4 matches from the database using 128-dimensional descriptors.        
         }
         \label{fig:images}
