--- a/myTable.tex
+++ b/myTable.tex
@@ -38,7 +38,7 @@
 	\end{tabularx}
 	\caption{ \textcolor{myRed}{}
 %		The percentage of correctly localized test queries for which the topK ranked database image is within $20$ meters from the ground truth query position. The proposed method (svmFV) outperforms the baseline methods.
-The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$. The learnt descriptors by the proposed method (FV e-SVM) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on both the 25k and 55k Pittsburgh image datasets.		
+\textbf{Results on Pittsburgh 25k dataset.} The fraction of correctly recognized queries (recall@K) vs. the number of top $K\in\{1,2,5,10,20\}$ retrieved database images for different Fisher vector dimensions $d\in\{128,512,2048\}$ and BOW for different calibration methods. The learnt Fisher vector descriptors by the  w-norm) consistently improve over the raw Fisher vector descriptors across the whole range of $K$ and all dimensions on both the 25k and 55k Pittsburgh image datasets.		
 }
 \label{tab:recall}
 \end{centering}
